done with section clothes

--- a/index.html
+++ b/index.html
@@ -3,20 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Vyshyvanka</title>
   </head>
   <body>
     <header>
-      <a href="./index.html">watchcharm</a>
+      <a href="./index.html">Vyshyvanka</a>
       <nav>
         <ul>
           <li><a href="./index.html"></a></li>
           <li><a href="">About Us</a></li>
-          <li><a href="">Catalog</a></li>
-          <li><a href="">Sale</a></li>
-          <li><a href="">Reviews</a></li>
+          <li><a href="">Our Collection</a></li>
+          <li><a href="">Customer Order</a></li>
+          <li><a href="">Testimonials</a></li>
           <li><a href="">Contact Us</a></li>
         </ul>
+      </nav>
+
+      <nav>
         <ul>
           <li>
             <a href="#" target="_blank" rel="noopener noreferrer nofollow"></a>
@@ -32,23 +35,96 @@
     </header>
     <main>
       <section>
-        <h1>Welcome to our collection of premium watches</h1>
-        <p>
-          Our watches are not just timepieces, but also an expression of your
-          personality and lifestyle. From classic designs to modern ones, we
-          have a watch to suit every taste and occasion.
-        </p>
-        <ul>
-          <li><img src="./images/Ellipse 21.jpg" alt="" /></li>
-          <li><img src="./images/Ellipse 22.jpg" alt="" /></li>
-          <li><img src="./images/Ellipse 23.jpg" alt="" /></li>
+        <img src="./images/girl.jpg" alt="girl" width="392" height="545" />
+        <h1>Reviving the traditional Ukrainian artistry in every stitch.</h1>
+        <button type="button">Order</button>
+        <img src="./images/Star1.jpg" alt="Star" />
 
-          <li><img src="./images/Rectangle 10.jpg" alt="" /></li>
-        </ul>
-        
+        <p>all embroidery is made by hand</p>
       </section>
       <section>
-        <h2>Catalog</h2>
+        <h2>About Us</h2>
+        <p>
+          The store "Vyshyvanka Vibes" is a place where traditional Ukrainian
+          vyshyvanka comes to life with new zest and style. Our store offers a
+          wide selection of high-quality and authentic embroidery, which
+          combines the elegance of traditional needlework and modern design. In
+          "Vyshyvanka Vibes" you will find various models of embroidery, from
+          classic to modern, corresponding to the latest fashion trends. Our
+          embroidery is made using natural fabrics and is embroidered by highly
+          qualified craftsmen who convey the beauty of Ukrainian culture in
+          every detail.We believe that vyshyvanka is not just clothing, but a
+          symbol of national pride, the heritage of our ancestors and a way of
+          expressing one's individuality. Each embroidery from "Vyshyvanka
+          Vibes" has its own unique history and symbolism, which gives it a
+          special meaning.
+        </p>
+        <img src="./images/girl2.jpg" alt="Girl2" width="709" height="545" />
+      </section>
+      <section>
+        <h2>Our Collection</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/clothes-1.jpg"
+              alt="vyshyvanka1"
+              width="400"
+              height="430"
+            />
+            <h3>AUGUST POLTAVA WOMEN'S BLOUSERING</h3>
+            <span>3300 UAH</span>
+          </li>
+          <li>
+            <img
+              src="./images/clothes-2.jpg"
+              alt="vyshyvanka2"
+              width="400"
+              height="430"
+            />
+            <h3>WOMEN'S BLOUSE GORGANY</h3>
+            <span>3350 UAH</span>
+          </li>
+          <li>
+            <img
+              src="./images/clothes-3.jpg"
+              alt="vyshyvanka3"
+              width="400"
+              height="430"
+            />
+            <h3>WOMEN'S BLOUSE CRIMEA</h3>
+            <span>4000 UAH</span>
+          </li>
+          <li>
+            <img
+              src="./images/clothes-4.jpg"
+              alt="vyshyvanka4"
+              width="400"
+              height="430"
+            />
+            <h3>MEN'S SHIRT VERKHOVINA</h3>
+            <span>3100 UAH</span>
+          </li>
+          <li>
+            <img
+              src="./images/clothes-5.jpg"
+              alt="vyshyvanka5"
+              width="400"
+              height="430"
+            />
+            <h3>MOUNTAIN MEN'S SHIRT</h3>
+            <span>3300 UAH</span>
+          </li>
+          <li>
+            <img
+              src="./images/clothes-6.jpg"
+              alt="vyshyvanka6"
+              width="400"
+              height="430"
+            />
+            <h3>MEN'S SHIRT YASEN</h3>
+            <span>1700 UAH</span>
+          </li>
+        </ul>
       </section>
     </main>
   </body>
