--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
           <li><a href="">Contact Us</a></li>
         </ul>
       </nav>
+      <nav></nav>
 
       <nav>
         <ul>
@@ -32,6 +33,7 @@
           </li>
         </ul>
       </nav>
+      <a href="+380684439426">+380 (68) 443-94-26</a>
     </header>
     <main>
       <section>
@@ -126,6 +128,78 @@
           </li>
         </ul>
       </section>
+      <section>
+        <img
+          src="./images/girlinvyshyvanka.jpg"
+          alt="girlinvyshyvanka"
+          width="1440"
+          height="776"
+        />
+      </section>
+      <section>
+        <h2>Testimonials</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/Maria Tkachuk.jpg"
+              alt="Maria Tkachuk"
+              width="64"
+              height="64"
+            />
+            <h3>Maria Tkachuk</h3>
+            <p>
+              I was pleasantly surprised by the variety of embroidery offered by
+              Vyshyvanka Vibes. They have models for every taste - from classic
+              to modern. I bought an embroidered dress to celebrate a special
+              occasion and received impeccable service and refinement in every
+              detail.
+            </p>
+          </li>
+          <li>
+            <img
+              src="./images/Sergey Rybachok.jpg"
+              alt="Sergey Rybachok"
+              width="64"
+              height="64"
+            />
+            <h3>Sergey Rybachok</h3>
+            <p>
+              Vyshyvanka Vibes exceeds all my expectations! Their vyshyvanka are
+              simply masterpieces! I fell in love with the quality of the
+              materials and the skill of the artisans behind each product. This
+              is my favorite embroidery shop where I always find something
+              special and unique.
+            </p>
+          </li>
+          <li>
+            <img
+              src="./images/Natalia Chatuk.jpg"
+              alt="Natalia Chatuk"
+              width="64"
+              heigh="64"
+            />
+            <h3>Natalia Chatuk</h3>
+            <p>
+              Vyshyvanka Vibes is a real find for everyone who appreciates
+              Ukrainian culture. Their embroidery reflects the spirit and
+              traditions of our people. I not only buy embroidered shirts for
+              myself, but also give them to my friends abroad as a symbol of our
+              beauty and national pride.
+            </p>
+          </li>
+        </ul>
+      </section>
     </main>
+    <footer>
+      <a href="./index.html">Vyshyvanka</a>
+      <ul>
+        <li><a href="">About Us</a></li>
+        <li><a href="">Our Collection</a></li>
+        <li><a href="">Customer Order</a></li>
+        <li><a href="">Testimonials</a></li>
+        <li><a href="">Contact Us</a></li>
+      </ul>
+      <p>A touch of Ukrainian culture in every embroidery</p>
+    </footer>
   </body>
 </html>
