--- a/index.html
+++ b/index.html
@@ -4,190 +4,258 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width, initial-scale=1.0" />
     <title>Vyshyvanka</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Montserrat:wght@100..900&family=Raleway:ital,wght@1,700&display=swap"
+      rel="stylesheet"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+      integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <a href="./index.html">Vyshyvanka</a>
-      <nav>
-        <ul>
-          <li><a href="./index.html"></a></li>
-          <li><a href="">About Us</a></li>
-          <li><a href="">Our Collection</a></li>
-          <li><a href="">Customer Order</a></li>
-          <li><a href="">Testimonials</a></li>
-          <li><a href="">Contact Us</a></li>
-        </ul>
-      </nav>
-      <nav></nav>
+    <header class="page-header">
+      <div class="container header-container">
+        <a class="header-logo" href="/index.html">
+          <img src="./images/logo.svg" alt="Vyshyvanka-vibes-logo" />
+        </a>
 
-      <nav>
-        <ul>
-          <li>
-            <a href="#" target="_blank" rel="noopener noreferrer nofollow"></a>
+        <nav class="header-nav">
+          <ul class="header-nav-list">
+            <li class="header-nav-item">
+              <a class="header-nav-link" href="./index.html"></a>
+            </li>
+
+            <li class="header-nav-item">
+              <a class="header-nav-link" href="">About Us</a>
+            </li>
+            <li class="header-nav-item">
+              <a class="header-nav-link" href="">Our Collection</a>
+            </li>
+            <li class="header-nav-item">
+              <a class="header-nav-link" href="">Customer Order</a>
+            </li>
+            <li class="header-nav-item">
+              <a class="header-nav-link" href="">Testimonials</a>
+            </li>
+            <li class="header-nav-item">
+              <a class="header-nav-link" href="">Contact Us</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="social-list">
+          <li class="header-nav-item">
+            <a class="phone-link" href="tel:+380684439426">
+              +380 (68) 443-94-26
+            </a>
           </li>
-          <li>
-            <a href="#" target="_blank" rel="noopener noreferrer nofollow"></a>
+          <li class="social-item">
+            <a
+              class="social-link"
+              href="#"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+            >
+              F
+            </a>
           </li>
-          <li>
-            <a href="#" target="_blank" rel="noopener noreferrer nofollow"></a>
+          <li class="social-item">
+            <a
+              class="social-link"
+              href="#"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+            >
+              I
+            </a>
           </li>
+          <li class="social-item">
+            <a
+              class="social-link"
+              href="#"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+            >
+              Y
+            </a>
+          </li>
+          <li class="social-item"></li>
         </ul>
-      </nav>
-      <a href="+380684439426">+380 (68) 443-94-26</a>
+      </div>
     </header>
+
     <main>
       <section>
-        <img src="./images/girl.jpg" alt="girl" width="392" height="545" />
-        <h1>Reviving the traditional Ukrainian artistry in every stitch.</h1>
-        <button type="button">Order</button>
-        <img src="./images/Star1.jpg" alt="Star" />
+        <div class="container">
+          <img src="./images/girl.jpg" alt="girl" width="392" height="545" />
+          <h1>Reviving the traditional Ukrainian artistry in every stitch.</h1>
+          <button type="button">Order</button>
+          <img src="./images/Star1.jpg" alt="Star" />
 
-        <p>all embroidery is made by hand</p>
+          <p>all embroidery is made by hand</p>
+        </div>
       </section>
       <section>
-        <h2>About Us</h2>
-        <p>
-          The store "Vyshyvanka Vibes" is a place where traditional Ukrainian
-          vyshyvanka comes to life with new zest and style. Our store offers a
-          wide selection of high-quality and authentic embroidery, which
-          combines the elegance of traditional needlework and modern design. In
-          "Vyshyvanka Vibes" you will find various models of embroidery, from
-          classic to modern, corresponding to the latest fashion trends. Our
-          embroidery is made using natural fabrics and is embroidered by highly
-          qualified craftsmen who convey the beauty of Ukrainian culture in
-          every detail.We believe that vyshyvanka is not just clothing, but a
-          symbol of national pride, the heritage of our ancestors and a way of
-          expressing one's individuality. Each embroidery from "Vyshyvanka
-          Vibes" has its own unique history and symbolism, which gives it a
-          special meaning.
-        </p>
-        <img src="./images/girl2.jpg" alt="Girl2" width="709" height="545" />
+        <div class="container">
+          <h2>About Us</h2>
+          <p>
+            The store "Vyshyvanka Vibes" is a place where traditional Ukrainian
+            vyshyvanka comes to life with new zest and style. Our store offers a
+            wide selection of high-quality and authentic embroidery, which
+            combines the elegance of traditional needlework and modern design.
+            In "Vyshyvanka Vibes" you will find various models of embroidery,
+            from classic to modern, corresponding to the latest fashion trends.
+            Our embroidery is made using natural fabrics and is embroidered by
+            highly qualified craftsmen who convey the beauty of Ukrainian
+            culture in every detail.We believe that vyshyvanka is not just
+            clothing, but a symbol of national pride, the heritage of our
+            ancestors and a way of expressing one's individuality. Each
+            embroidery from "Vyshyvanka Vibes" has its own unique history and
+            symbolism, which gives it a special meaning.
+          </p>
+          <img src="./images/girl2.jpg" alt="Girl2" width="709" height="545" />
+        </div>
+      </section>
+
+      <section>
+        <div class="container">
+          <h2>Our Collection</h2>
+          <ul>
+            <li>
+              <img
+                src="./images/clothes-1.jpg"
+                alt="vyshyvanka1"
+                width="400"
+                height="430"
+              />
+              <h3>AUGUST POLTAVA WOMEN'S BLOUSERING</h3>
+              <span>3300 UAH</span>
+            </li>
+            <li>
+              <img
+                src="./images/clothes-2.jpg"
+                alt="vyshyvanka2"
+                width="400"
+                height="430"
+              />
+              <h3>WOMEN'S BLOUSE GORGANY</h3>
+              <span>3350 UAH</span>
+            </li>
+            <li>
+              <img
+                src="./images/clothes-3.jpg"
+                alt="vyshyvanka3"
+                width="400"
+                height="430"
+              />
+              <h3>WOMEN'S BLOUSE CRIMEA</h3>
+              <span>4000 UAH</span>
+            </li>
+            <li>
+              <img
+                src="./images/clothes-4.jpg"
+                alt="vyshyvanka4"
+                width="400"
+                height="430"
+              />
+              <h3>MEN'S SHIRT VERKHOVINA</h3>
+              <span>3100 UAH</span>
+            </li>
+            <li>
+              <img
+                src="./images/clothes-5.jpg"
+                alt="vyshyvanka5"
+                width="400"
+                height="430"
+              />
+              <h3>MOUNTAIN MEN'S SHIRT</h3>
+              <span>3300 UAH</span>
+            </li>
+            <li>
+              <img
+                src="./images/clothes-6.jpg"
+                alt="vyshyvanka6"
+                width="400"
+                height="430"
+              />
+              <h3>MEN'S SHIRT YASEN</h3>
+              <span>1700 UAH</span>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section>
+        <div class="container">
+          <img
+            src="./images/girlinvyshyvanka.jpg"
+            alt="girlinvyshyvanka"
+            width="1440"
+            height="776"
+          />
+        </div>
       </section>
       <section>
-        <h2>Our Collection</h2>
-        <ul>
-          <li>
-            <img
-              src="./images/clothes-1.jpg"
-              alt="vyshyvanka1"
-              width="400"
-              height="430"
-            />
-            <h3>AUGUST POLTAVA WOMEN'S BLOUSERING</h3>
-            <span>3300 UAH</span>
-          </li>
-          <li>
-            <img
-              src="./images/clothes-2.jpg"
-              alt="vyshyvanka2"
-              width="400"
-              height="430"
-            />
-            <h3>WOMEN'S BLOUSE GORGANY</h3>
-            <span>3350 UAH</span>
-          </li>
-          <li>
-            <img
-              src="./images/clothes-3.jpg"
-              alt="vyshyvanka3"
-              width="400"
-              height="430"
-            />
-            <h3>WOMEN'S BLOUSE CRIMEA</h3>
-            <span>4000 UAH</span>
-          </li>
-          <li>
-            <img
-              src="./images/clothes-4.jpg"
-              alt="vyshyvanka4"
-              width="400"
-              height="430"
-            />
-            <h3>MEN'S SHIRT VERKHOVINA</h3>
-            <span>3100 UAH</span>
-          </li>
-          <li>
-            <img
-              src="./images/clothes-5.jpg"
-              alt="vyshyvanka5"
-              width="400"
-              height="430"
-            />
-            <h3>MOUNTAIN MEN'S SHIRT</h3>
-            <span>3300 UAH</span>
-          </li>
-          <li>
-            <img
-              src="./images/clothes-6.jpg"
-              alt="vyshyvanka6"
-              width="400"
-              height="430"
-            />
-            <h3>MEN'S SHIRT YASEN</h3>
-            <span>1700 UAH</span>
-          </li>
-        </ul>
-      </section>
-      <section>
-        <img
-          src="./images/girlinvyshyvanka.jpg"
-          alt="girlinvyshyvanka"
-          width="1440"
-          height="776"
-        />
-      </section>
-      <section>
-        <h2>Testimonials</h2>
-        <ul>
-          <li>
-            <img
-              src="./images/Maria Tkachuk.jpg"
-              alt="Maria Tkachuk"
-              width="64"
-              height="64"
-            />
-            <h3>Maria Tkachuk</h3>
-            <p>
-              I was pleasantly surprised by the variety of embroidery offered by
-              Vyshyvanka Vibes. They have models for every taste - from classic
-              to modern. I bought an embroidered dress to celebrate a special
-              occasion and received impeccable service and refinement in every
-              detail.
-            </p>
-          </li>
-          <li>
-            <img
-              src="./images/Sergey Rybachok.jpg"
-              alt="Sergey Rybachok"
-              width="64"
-              height="64"
-            />
-            <h3>Sergey Rybachok</h3>
-            <p>
-              Vyshyvanka Vibes exceeds all my expectations! Their vyshyvanka are
-              simply masterpieces! I fell in love with the quality of the
-              materials and the skill of the artisans behind each product. This
-              is my favorite embroidery shop where I always find something
-              special and unique.
-            </p>
-          </li>
-          <li>
-            <img
-              src="./images/Natalia Chatuk.jpg"
-              alt="Natalia Chatuk"
-              width="64"
-              heigh="64"
-            />
-            <h3>Natalia Chatuk</h3>
-            <p>
-              Vyshyvanka Vibes is a real find for everyone who appreciates
-              Ukrainian culture. Their embroidery reflects the spirit and
-              traditions of our people. I not only buy embroidered shirts for
-              myself, but also give them to my friends abroad as a symbol of our
-              beauty and national pride.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2>Testimonials</h2>
+          <ul>
+            <li>
+              <img
+                src="./images/Maria Tkachuk.jpg"
+                alt="Maria Tkachuk"
+                width="64"
+                height="64"
+              />
+              <h3>Maria Tkachuk</h3>
+              <p>
+                I was pleasantly surprised by the variety of embroidery offered
+                by Vyshyvanka Vibes. They have models for every taste - from
+                classic to modern. I bought an embroidered dress to celebrate a
+                special occasion and received impeccable service and refinement
+                in every detail.
+              </p>
+            </li>
+            <li>
+              <img
+                src="./images/Sergey Rybachok.jpg"
+                alt="Sergey Rybachok"
+                width="64"
+                height="64"
+              />
+              <h3>Sergey Rybachok</h3>
+              <p>
+                Vyshyvanka Vibes exceeds all my expectations! Their vyshyvanka
+                are simply masterpieces! I fell in love with the quality of the
+                materials and the skill of the artisans behind each product.
+                This is my favorite embroidery shop where I always find
+                something special and unique.
+              </p>
+            </li>
+            <li>
+              <img
+                src="./images/Natalia Chatuk.jpg"
+                alt="Natalia Chatuk"
+                width="64"
+                heigh="64"
+              />
+              <h3>Natalia Chatuk</h3>
+              <p>
+                Vyshyvanka Vibes is a real find for everyone who appreciates
+                Ukrainian culture. Their embroidery reflects the spirit and
+                traditions of our people. I not only buy embroidered shirts for
+                myself, but also give them to my friends abroad as a symbol of
+                our beauty and national pride.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer>
