--- a/index.html
+++ b/index.html
@@ -50,44 +50,44 @@
             </li>
           </ul>
         </nav>
-        <ul class="social-list">
-          <li class="header-nav-item">
-            <a class="phone-link" href="tel:+380684439426">
-              +380 (68) 443-94-26
-            </a>
-          </li>
-          <li class="social-item">
-            <a
-              class="social-link"
-              href="#"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-            >
-              F
-            </a>
-          </li>
-          <li class="social-item">
-            <a
-              class="social-link"
-              href="#"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-            >
-              I
-            </a>
-          </li>
-          <li class="social-item">
-            <a
-              class="social-link"
-              href="#"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-            >
-              Y
-            </a>
-          </li>
-          <li class="social-item"></li>
-        </ul>
+
+        <div class="header-right">
+          <a class="phone-link" href="tel:+380684439426">+380(68)443-94-26</a>
+          <ul class="social-list">
+            <li class="header-nav-item"></li>
+            <li class="social-item">
+              <a
+                class="social-link"
+                href="#"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                F
+              </a>
+            </li>
+            <li class="social-item">
+              <a
+                class="social-link"
+                href="#"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                I
+              </a>
+            </li>
+            <li class="social-item">
+              <a
+                class="social-link"
+                href="#"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                Y
+              </a>
+            </li>
+            <li class="social-item"></li>
+          </ul>
+        </div>
       </div>
     </header>
 
